# PBL_stock

./: .gitignore  Book1.xlsx  README.md  app.py  bert_train.py  index_values.json  log_time.py  ml_data_post.py  predict_lstm.py  requirements.txt  scrape.ipynb  scrape.py  scrape.sh  scrape_index.ipynb  scrape_index.py  scrape_news.py  scrape_stock_name.ipynb  scrape_values.ipynb  scrape_values.py  server.py  sql_backup.sh  stock_data.sql  stock_name.json  stock_server.service  sympo.tex  test.ipynb  test.json  test.txt  test_SQL.ipynb  test_lstm.ipynb  test_lstm.py  train.ipynb  train_bert.ipynb  train_lstm.ipynb  train_lstm.py  train_stocks.ipynb  train_stocks_itransformer.py  train_stocks_lstm.py  update_column.py  update_column_2.py  (+2 more)
htmls/: test.html  test2.html  test3.html  test4.html  test5.html
scrape_data/: 2024-05-02_news_data.json  2024-05-02_test_data.json  stock_name.json  test.json
server/: Cargo.toml
server/src/: main.rs
sql_server/: .envexample  Cargo.toml
sql_server/src/: main.rs
stock_data_server/: Cargo.toml
stock_data_server/src/: main.rs
testDB/: Cargo.toml
testDB/src/: main.rs
test_LSTM/: datasets.sh  test_lstm.ipynb  test_lstm.py  test_lstm_2.py
test_func/: Cargo.toml
test_func/src/: main.rs
test_iTransformer/: test_itransformer.ipynb  test_itransformer.py
train_data/: test.csv  test.json  train.csv  train.json
