[package]
name = "stock_data_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "mysql"] }
dotenv = "0.15"
env_logger = "0.11.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
